--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,11 +69,16 @@ android {
             buildConfigField "boolean", "BOOTSTRAP_INTERFACE", "true"
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation project(path: ':flutter')
 
     zz_crosswalkImplementation 'org.xwalk:xwalk_core_library:23.53.589.4'
 }
